--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,19 @@
   font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif; font-size: 24px; font-style: normal; font-variant: normal;
 }
 body{
-  background-color:transparent;
+  background: #22c1c3;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #fdbb2d, #22c1c3);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #fdbb2d, #22c1c3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   text-align: center;
-  margin-top:25%;
+  margin-top:15%;
 }
 h1{
-  font-size: 54px;
-  color:white;
+  font-size: 14px;
+  color:black;
 }
 #clock{
-  width: 10rem;
-	height: 10rem;
+  width: 5rem;
+	height: 5rem;
 	border-radius: 50%;
 	background: rgba(33, 2, 2, 0.062);
 	display: flex;
@@ -24,7 +26,7 @@ h1{
 }
 #hora{
   text-align: center;
-  font-size:50px;
+  font-size:22px;
 }
 #fecha{
   background-color: rgba(0, 0, 0, 0.152);
